remove IPython shim imports

--- a/jupyter_nbconvert/exporters/tests/files/notebook2.ipynb
+++ b/jupyter_nbconvert/exporters/tests/files/notebook2.ipynb
@@ -26,7 +26,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Welcome to pylab, a matplotlib-based Python environment [backend: module://IPython.kernel.zmq.pylab.backend_inline].\n",
+      "Welcome to pylab, a matplotlib-based Python environment [backend: module://ipython_kernel.pylab.backend_inline].\n",
       "For more information, type 'help(pylab)'.\n"
      ]
     }
