--- a/jupyter_nbconvert/tests/files/notebook2.ipynb
+++ b/jupyter_nbconvert/tests/files/notebook2.ipynb
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "module://IPython.kernel.zmq.pylab.backend_inline\n"
+      "module://ipython_kernel.pylab.backend_inline\n"
      ]
     }
    ],
