--- a/examples/Notebook/Using nbconvert as a Library.ipynb
+++ b/examples/Notebook/Using nbconvert as a Library.ipynb
@@ -114,7 +114,7 @@
    },
    "outputs": [],
    "source": [
-    "from IPython.config import Config\n",
+    "from traitlets.config import Config\n",
     "from IPython.nbconvert import HTMLExporter\n",
     "\n",
     "# The `basic` template is used here.\n",
@@ -359,7 +359,7 @@
    },
    "outputs": [],
    "source": [
-    "from IPython.config import Config\n",
+    "from traitlets.config import Config\n",
     "\n",
     "c =  Config({\n",
     "            'ExtractOutputPreprocessor':{'enabled':True}\n",
@@ -409,7 +409,7 @@
    "outputs": [],
    "source": [
     "from IPython.nbconvert.preprocessors import Preprocessor\n",
-    "import IPython.config\n",
+    "import traitlets.config\n",
     "print(\"Four relevant docstring\")\n",
     "print('=============================')\n",
     "print(Preprocessor.__doc__)\n",
@@ -444,7 +444,7 @@
    },
    "outputs": [],
    "source": [
-    "from IPython.utils.traitlets import Integer"
+    "from traitlets import Integer"
    ]
   },
   {
