s/ipython_kernel/ipykernel

--- a/nbconvert/tests/files/notebook2.ipynb
+++ b/nbconvert/tests/files/notebook2.ipynb
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "module://ipython_kernel.pylab.backend_inline\n"
+      "module://ipykernel.pylab.backend_inline\n"
      ]
     }
    ],
