Rename ipython --> jupyter in example notebooks

--- a/examples/Notebook/Converting Notebooks With nbconvert.ipynb
+++ b/examples/Notebook/Converting Notebooks With nbconvert.ipynb
@@ -29,10 +29,10 @@
     "You can invoke nbconvert by running\n",
     "\n",
     "```bash\n",
-    "$ ipython nbconvert <options and arguments>\n",
+    "$ jupyter nbconvert <options and arguments>\n",
     "```\n",
     "\n",
-    "Call `ipython nbconvert` with the `--help` flag or without any aruments to display the basic help.  For detailed configuration help, use the `--help-all` flag."
+    "Call `jupyter nbconvert` with the `--help` flag or without any aruments to display the basic help.  For detailed configuration help, use the `--help-all` flag."
    ]
   },
   {
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "ipython nbconvert  'Index.ipynb'"
+    "jupyter nbconvert  'Index.ipynb'"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "ipython nbconvert  --to=html 'Index.ipynb'"
+    "jupyter nbconvert  --to=html 'Index.ipynb'"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "ipython nbconvert  --to=latex 'Index.ipynb'"
+    "jupyter nbconvert  --to=latex 'Index.ipynb'"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "ipython nbconvert  --to=latex 'Index.ipynb' --post=pdf"
+    "jupyter nbconvert  --to=latex 'Index.ipynb' --post=pdf"
    ]
   },
   {
@@ -144,7 +144,7 @@
    },
    "outputs": [],
    "source": [
-    "pyfile = !ipython nbconvert --to python 'Index.ipynb' --stdout\n",
+    "pyfile = !jupyter nbconvert --to python 'Index.ipynb' --stdout\n",
     "for l in pyfile[20:40]:\n",
     "    print l"
    ]
@@ -188,7 +188,7 @@
    },
    "outputs": [],
    "source": [
-    "pyfile = !ipython nbconvert --to python 'Index.ipynb' --stdout --template=simplepython.tpl\n",
+    "pyfile = !jupyter nbconvert --to python 'Index.ipynb' --stdout --template=simplepython.tpl\n",
     "\n",
     "for l in pyfile[4:40]:\n",
     "    print l\n",
@@ -253,7 +253,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# ipython nbconvert --to html <your chosen notebook.ipynb> --template=<your template file>"
+    "# jupyter nbconvert --to html <your chosen notebook.ipynb> --template=<your template file>"
    ]
   },
   {
@@ -275,7 +275,7 @@
    },
    "outputs": [],
    "source": [
-    "# ipython nbconvert --to html '04 - Custom Display Logic.ipynb' --template=soln/coloreddiff.tpl"
+    "# jupyter nbconvert --to html '04 - Custom Display Logic.ipynb' --template=soln/coloreddiff.tpl"
    ]
   },
   {
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "IPython nbconvert can be configured using the default profile or a profile specified via the `--profile` flag.  Additionally, if a `config.py` file exist in current working directory, nbconvert will use that as config."
+    "Jupyter nbconvert can be configured using the default profile or a profile specified via the `--profile` flag.  Additionally, if a `config.py` file exist in current working directory, nbconvert will use that as config."
    ]
   }
  ],
@@ -309,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.4.2"
   }
  },
  "nbformat": 4,
