--- a/examples/Notebook/Using nbconvert as a Library.ipynb
+++ b/examples/Notebook/Using nbconvert as a Library.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The response is a JSON string which represents an IPython notebook. Next, read the response using nbformat.\n",
+    "The response is a JSON string which represents a Jupyter notebook. Next, read the response using nbformat.\n",
     "\n",
     "Doing this will guarantee that the notebook structure is valid. Note that the in-memory format and on disk format are slightly different. In particual, on disk, multiline strings might be splitted into a list of strings."
    ]
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "from IPython import nbformat\n",
+    "from jupyter import nbformat\n",
     "jake_notebook = nbformat.reads(response.text, as_version=4)\n",
     "jake_notebook.cells[0]"
    ]
@@ -269,7 +269,7 @@
    },
    "outputs": [],
    "source": [
-    "from IPython.display import Image\n",
+    "from jupyter.notebook.display import Image\n",
     "Image(data=resources['outputs']['output_3_0.png'],format='png')"
    ]
   },
@@ -293,7 +293,7 @@
    "source": [
     "Use case:\n",
     "\n",
-    "> I write an [awesome blog](http://jakevdp.github.io/) using IPython notebooks converted to HTML, and I want the images to be cached.  Having one html file with all of the images base64 encoded inside it is nice when sharing with a coworker, but for a website, not so much.  I need an HTML exporter, and I want it to extract the figures!"
+    "> I write an [awesome blog](http://jakevdp.github.io/) using Jupyter notebooks converted to HTML, and I want the images to be cached.  Having one html file with all of the images base64 encoded inside it is nice when sharing with a coworker, but for a website, not so much.  I need an HTML exporter, and I want it to extract the figures!"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can use `Preprocessors` to accomplish the task at hand.  IPython has preprocessors built in which you can use.  One of them, the `ExtractOutputPreprocessor` is responsible for crawling the notebook, finding all of the figures, and putting them into the resources directory, as well as choosing the key (i.e. `filename_xx_y.extension`) that can replace the figure inside the template.\n",
+    "You can use `Preprocessors` to accomplish the task at hand.  Jupyter has preprocessors built in which you can use.  One of them, the `ExtractOutputPreprocessor` is responsible for crawling the notebook, finding all of the figures, and putting them into the resources directory, as well as choosing the key (i.e. `filename_xx_y.extension`) that can replace the figure inside the template.\n",
     "\n",
     "The `ExtractOutputPreprocessor` is special because it's available in all of the `Exporter`s, and is just disabled in some by default."
    ]
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the IPython configuration/Traitlets system to enable it. If you have already set IPython configuration options, this system is familiar to you. Configuration options will always of the form:\n",
+    "Use the Jupyter configuration/Traitlets system to enable it. If you have already set Jupyter configuration options, this system is familiar to you. Configuration options will always of the form:\n",
     "\n",
     "    ClassName.attribute_name = value\n",
     "   \n",
@@ -431,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following demonstration was requested in [an IPython GitHub issue](https://github.com/ipython/nbconvert/pull/137#issuecomment-18658235), the ability to exclude a cell by index. \n",
+    "The following demonstration was requested in [a GitHub issue](https://github.com/ipython/nbconvert/pull/137#issuecomment-18658235), the ability to exclude a cell by index. \n",
     "\n",
     "Inject cells is similar, and won't be covered here.  If you want to inject static content at the beginning/end of a notebook, use a custom template."
    ]
@@ -561,7 +561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "@jakevdp uses Pelican and IPython Notebook to blog. Pelican [will use](https://github.com/getpelican/pelican-plugins/pull/21) nbconvert programatically to generate blog post. Have a look a [Pythonic Preambulations](http://jakevdp.github.io/) for Jake's blog post."
+    "@jakevdp uses Pelican and Jupyter Notebook to blog. Pelican [will use](https://github.com/getpelican/pelican-plugins/pull/21) nbconvert programatically to generate blog post. Have a look a [Pythonic Preambulations](http://jakevdp.github.io/) for Jake's blog post."
    ]
   },
   {
@@ -611,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.4.2"
   }
  },
  "nbformat": 4,
