Convert notebooks to rst and split apart index.rst

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -4,129 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NbConvert"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Command line usage"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`NbConvert` is both a library and command line tool that allows you to convert notebooks to other formats.  It ships with many common formats: `html`, `latex`, `markdown`, `python`, `rst`, and  `slides`\n",
-    "NbConvert relys on the Jinja templating engine, so implementing a new format or tweeking an existing one is easy."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can invoke nbconvert by running\n",
-    "\n",
-    "```bash\n",
-    "$ jupyter nbconvert <options and arguments>\n",
-    "```\n",
-    "\n",
-    "Call `jupyter nbconvert` with the `--help` flag or without any aruments to display the basic help.  For detailed configuration help, use the `--help-all` flag."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Basic export"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As a test, the `Index.ipynb` notebook in the directory will be convert. \n",
-    "\n",
-    "If you're converting a notebook with code in it, make sure to run the code cells that you're interested in before attempting to convert the notebook.  Unless explicitly requested, nbconvert **does not execute the code cells** of the notebooks that it converts."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "jupyter nbconvert  'Index.ipynb'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Html is the (configurable) default value.  The verbose form of the same command as above is "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "jupyter nbconvert  --to=html 'Index.ipynb'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also convert to latex, which will extract the embeded images.  If the embeded images are SVGs, inkscape is used to convert them to pdf:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "jupyter nbconvert  --to=latex 'Index.ipynb'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that the latex conversion creates latex, not a PDF.  To create a PDF you need the required third party packages to compile the latex.\n",
-    "\n",
-    "A `--post` flag is provided for convinience which allows you to have nbconvert automatically compile a PDF for you from your output."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "jupyter nbconvert  --to=latex 'Index.ipynb' --post=pdf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Custom templates"
+    "# Customizing nbconvert"
    ]
   },
   {
@@ -276,20 +154,6 @@
    "outputs": [],
    "source": [
     "# jupyter nbconvert --to html '04 - Custom Display Logic.ipynb' --template=soln/coloreddiff.tpl"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get rid of all command line flags."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Jupyter nbconvert can be configured using the default profile or a profile specified via the `--profile` flag.  Additionally, if a `config.py` file exist in current working directory, nbconvert will use that as config."
    ]
   }
  ],
