--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -11,115 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look at the first 20 lines of the `python` exporter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pyfile = !jupyter nbconvert --to python 'Index.ipynb' --stdout\n",
-    "for l in pyfile[20:40]:\n",
-    "    print l"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From the code, you can see that non-code cells are also exported.  If you want to change this behavior, you can use a custom template.  The custom template inherits from the Python template and overwrites the markdown blocks so that they are empty."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%%writefile simplepython.tpl\n",
-    "{% extends 'python.tpl'%}\n",
+    "Under the hood, nbconvert uses [Jinja templates](http://jinja2.readthedocs.org/en/latest/intro.html) to specify how the notebooks should be formatted. These templates can be fully customized, allowing you to use nbconvert to create notebooks in different formats with different styles as well.\n",
     "\n",
-    "{% block markdowncell -%}\n",
-    "{% endblock markdowncell %}\n",
-    "\n",
-    "## we also want to get rig of header cell\n",
-    "{% block headingcell -%}\n",
-    "{% endblock headingcell %}\n",
-    "\n",
-    "## and let's change the appearance of input prompt\n",
-    "{% block in_prompt %}\n",
-    "# This was input cell with prompt number : {{ cell.prompt_number if cell.prompt_number else ' ' }}\n",
-    "{%- endblock in_prompt %}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pyfile = !jupyter nbconvert --to python 'Index.ipynb' --stdout --template=simplepython.tpl\n",
-    "\n",
-    "for l in pyfile[4:40]:\n",
-    "    print l\n",
-    "print '...'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For details about the template syntax, refer to [Jinja's manual](http://jinja2.readthedocs.org/en/latest/intro.html)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Template that use cells metadata"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The notebook file format supports attaching arbitrary JSON metadata to each cell.  Here, as an exercise, you will use the metadata to tags cells."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First you need to choose another notebook you want to convert to html, and tag some of the cells with metadata.  You can refere to the file `soln/celldiff.js` as an example or follow the Javascript tutorial to figure out how do change cell metadata.  Assuming you have a notebook with some of the cells tagged as `Easy`|`Medium`|`Hard`|`<None>`, the notebook can be converted specially using a custom template.  Design your template in the cells provided below.\n",
-    "\n",
-    "The following, unorganized lines of code, may be of help:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "{% extends 'html_full.tpl'%}\n",
-    "{% block any_cell %}\n",
-    "{{ super() }}\n",
-    "<div style=\"background-color:red\">\n",
-    "<div style='background-color:orange'>\n",
-    "```\n",
-    "\n",
-    "If your key name under `cell.metadata.example.difficulty`, the following code would get the value of it:\n",
-    "\n",
-    "`cell['metadata'].get('example',{}).get('difficulty','')`\n",
-    "\n",
-    "Tip: Use `%%writefile` to edit the template in the notebook."
+    "Out of the box, nbconvert can be used to convert notebooks to plain Python files. For example, the following command converts the `example.ipynb` notebook to Python and prints out the result:"
    ]
   },
   {
@@ -131,7 +25,17 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# jupyter nbconvert --to html <your chosen notebook.ipynb> --template=<your template file>"
+    "\n",
+    "jupyter nbconvert --to python 'example.ipynb' --stdout"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the code, you can see that non-code cells are also exported.  As mentioned above, if you want to change this behavior, you can use a custom template.  The custom template inherits from the Python template and overwrites the markdown blocks so that they are empty. \n",
+    "\n",
+    "Below is an example of a custom template, which we write to a file called `simplepython.tpl`. This template removes markdown cells from the output, and also changes how the execution count numbers are formatted:"
    ]
   },
   {
@@ -142,7 +46,25 @@
    },
    "outputs": [],
    "source": [
-    "%loadpy soln/coloreddiff.tpl"
+    "%%writefile simplepython.tpl\n",
+    "\n",
+    "{% extends 'python.tpl'%}\n",
+    "\n",
+    "## remove markdown cells\n",
+    "{% block markdowncell -%}\n",
+    "{% endblock markdowncell %}\n",
+    "\n",
+    "## change the appearance of execution count\n",
+    "{% block in_prompt %}\n",
+    "# This was input cell with execution count: {{ cell.execution_count if cell.execution_count else ' ' }}\n",
+    "{%- endblock in_prompt %}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using this template, we see that the resulting Python code does not contain anything that was previously in a markdown cell, and has special comments regarding the execution counts:"
    ]
   },
   {
@@ -153,29 +75,65 @@
    },
    "outputs": [],
    "source": [
-    "# jupyter nbconvert --to html '04 - Custom Display Logic.ipynb' --template=soln/coloreddiff.tpl"
+    "%%bash\n",
+    "\n",
+    "jupyter nbconvert --to python 'example.ipynb' --stdout --template=simplepython.tpl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Templates that use cell metadata\n",
+    "\n",
+    "The notebook file format supports attaching arbitrary JSON metadata to each cell.  Here, as an exercise, you will use the metadata to tag cells.\n",
+    "\n",
+    "First you need to choose another notebook you want to convert to html, and tag some of the cells with metadata.  You can refer to the file `soln/celldiff.js` as an example or follow the Javascript tutorial to figure out how do change cell metadata.  Assuming you have a notebook with some of the cells tagged as `'Easy'`, `'Medium'`, `'Hard'`, or `<None>`, the notebook can be converted specially using a custom template.  Design your template in the cells provided below.\n",
+    "\n",
+    "Hint: if your tags are located at `cell.metadata.example.difficulty`, the following Python code would get the value of the tag: `cell['metadata'].get('example', {}).get('difficulty', '')`\n",
+    "\n",
+    "The following **unorganized** lines of code may be a helpful starting point:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%writefile mytemplate.tpl\n",
+    "\n",
+    "{% extends 'html_full.tpl'%}\n",
+    "{% block any_cell %}\n",
+    "{{ super() }}\n",
+    "<div style=\"background-color:red\">\n",
+    "<div style='background-color:orange'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you have tagged the cells appropriately and written your template using the cell above, try converting your notebook using the following command:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "jupyter nbconvert --to html <your chosen notebook.ipynb> --template=mytemplate.tpl"
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.2"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 0
 }
