Update docs on nbconvert as a library

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -84,6 +84,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### A few gotchas\n",
+    "\n",
+    "Jinja blocks use `{% %}` by default which does not play nicely with $\\LaTeX$, hence thoses are replaced by `((* *))` in latex templates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Templates that use cell metadata\n",
     "\n",
     "The notebook file format supports attaching arbitrary JSON metadata to each cell.  Here, as an exercise, you will use the metadata to tag cells.\n",
