Remove math markup from customizing.ipynb

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "### A few gotchas\n",
     "\n",
-    "Jinja blocks use `{% %}` by default which does not play nicely with $\\LaTeX$, hence thoses are replaced by `((* *))` in latex templates."
+    "Jinja blocks use `{% %}` by default which does not play nicely with LaTeX, hence thoses are replaced by `((* *))` in LaTeX templates."
    ]
   },
   {
