--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -84,6 +84,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**See also**: [Template structure](_static/template_structure.html), for the available blocks you can override in your own templates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### A few gotchas\n",
     "\n",
     "Jinja blocks use `{% %}` by default which does not play nicely with LaTeX, hence thoses are replaced by `((* *))` in LaTeX templates."
@@ -142,7 +149,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "IPython (Python 3)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3+"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
