Change default behaviour to abort execution if one of the cells fails, and use flag '--allow-errors' instead of the current '--abort-on-error'.

--- a/nbconvert/tests/files/notebook3_with_errors.ipynb
+++ b/nbconvert/tests/files/notebook3_with_errors.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook contains a cell which deliberately throws an exception. This is to test if `nbconvert` stops conversion if both the `--execute` and `--abort-on-error` flags were provided. In the cells before and after the one which raises the exception we compute a couple of numbers. If they exist in the output we know that the respective cells were executed."
+    "This notebook contains a cell which deliberately throws an exception. This is to test if `nbconvert` stops conversion if the flag `--execute` is given without `--allow-errors`. In the cells before and after the one which raises the exception we compute a couple of numbers. If they exist in the output we know that the respective cells were executed."
    ]
   },
   {
