--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -118,6 +118,11 @@
        "    padding: 5px;\n",
        "    border: 1px solid hsla(120, 60%, 70%, 0.5);\n",
        "    border-left: 2px solid black;\n",
+       "}\n",
+       "\n",
+       ".template_block pre {\n",
+       "    background: transparent;\n",
+       "    padding: 0;\n",
        "}\n",
        "\n",
        ".big_vertical_ellipsis {\n",
@@ -185,7 +190,39 @@
        "        </div>\n",
        "    </div>\n",
        "    <div class=\"big_vertical_ellipsis\">⋮</div>\n",
-       "</div>\n"
+       "</div>\n",
+       "\n",
+       "<h3>Extra HTML blocks (full.tpl)</h3>\n",
+       "<div class=\"template_block\">header\n",
+       "    <pre>&lt;head&gt;</pre>\n",
+       "    <div class=\"template_block\">html_head</div>\n",
+       "    <pre>&lt;/head&gt;</pre>\n",
+       "</div>\n",
+       "\n",
+       "<h3>Extra Latex blocks</h3>\n",
+       "<div class=\"template_block\">header\n",
+       "    <div class=\"template_block\">docclass</div>\n",
+       "    <div class=\"template_block\">packages</div>\n",
+       "    <div class=\"template_block\">definitions\n",
+       "        <div class=\"template_block\">title</div>\n",
+       "        <div class=\"template_block\">date</div>\n",
+       "        <div class=\"template_block\">author</div>\n",
+       "    </div>\n",
+       "    <div class=\"template_block\">commands\n",
+       "        <div class=\"template_block\">margins</div>\n",
+       "    </div>\n",
+       "</div>\n",
+       "<div class=\"template_block\">body\n",
+       "    <div class=\"template_block\">predoc\n",
+       "        <div class=\"template_block\">maketitle</div>\n",
+       "        <div class=\"template_block\">abstract</div>\n",
+       "    </div>\n",
+       "    ... other fields as above ...\n",
+       "    <div class=\"template_block\">postdoc\n",
+       "        <div class=\"template_block\">bibliography</div>\n",
+       "    </div>\n",
+       "</div>\n",
+       "\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -265,7 +302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IPython (Python 3)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -279,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3+"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
