Added test for pdf compilation where strikeouts are used.

--- a/nbconvert/tests/files/notebook2.ipynb
+++ b/nbconvert/tests/files/notebook2.ipynb
@@ -1574,6 +1574,13 @@
     "    raise Exception(\"message\")\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This string contains a ~~strikethrough~~, struckthrough. "
+   ]
   }
  ],
  "metadata": {
