added relevant code from example to test notebook

--- a/nbconvert/tests/files/notebook2.ipynb
+++ b/nbconvert/tests/files/notebook2.ipynb
@@ -1569,6 +1569,8 @@
    "metadata": {},
    "source": [
     "```python\n",
+    "import math, numpy\n",
+    "def matrix_calc(L):\n",
     "def foo(bar=1):\n",
     "    \"\"\"docstring\"\"\"\n",
     "    raise Exception(\"message\")\n",
@@ -1579,7 +1581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This string contains a ~~strikethrough~~, struckthrough. "
+    "This string contains a ~~strikethrough~~, struckthrough. ",
    ]
   }
  ],
