--- a/nbconvert/tests/files/notebook2.ipynb
+++ b/nbconvert/tests/files/notebook2.ipynb
@@ -1581,7 +1581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This string contains a ~~strikethrough~~, struckthrough. ",
+    "This string contains a ~~strikethrough~~, struckthrough. "
    ]
   }
  ],
