fixed example to have default value

--- a/nbconvert/tests/files/notebook2.ipynb
+++ b/nbconvert/tests/files/notebook2.ipynb
@@ -1569,8 +1569,9 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "import math, numpy\n",
-    "def matrix_calc(L):\n",
+    "import math \n",
+    "import numpy as np\n",",
+    "def matrix_calc(L=np.random.random(size=(1,1))):\n",
     "    \"\"\"docstring\"\"\"\n",
     "    raise Exception(\"message\")\n",
     "```"
