fixed syntax error, removed mutable key default value

--- a/nbconvert/tests/files/notebook2.ipynb
+++ b/nbconvert/tests/files/notebook2.ipynb
@@ -1570,9 +1570,11 @@
    "source": [
     "```python\n",
     "import math \n",
-    "import numpy as np\n",",
-    "def matrix_calc(L=np.random.random(size=(1,1))):\n",
+    "import numpy as np\n",
+    "def matrix_calc(L=None):\n",
     "    \"\"\"docstring\"\"\"\n",
+    "    if L is None:",
+    "       L = np.random.random(size=(1,1))",
     "    raise Exception(\"message\")\n",
     "```"
    ]
