add missing end block in customizing doc

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -276,7 +276,8 @@
     "{% block any_cell %}\n",
     "{{ super() }}\n",
     "<div style=\"background-color:red\">\n",
-    "<div style='background-color:orange'>"
+    "<div style='background-color:orange'>\n",
+    "{% endblock any_cell %}\n"
    ]
   },
   {
