Do not give bad example in docs
remove rst, because otherwise we get duplicated fixes.
Do not give bad example in docs, and let reader fill in the blanks.

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -108,7 +108,7 @@
        "-->\n",
        "<style type=\"text/css\">\n",
        "/* Overrides of notebook CSS for static HTML export */\n",
-       "body {\n",
+       ".jp-tpl-structure {\n",
        "    font-family: sans;\n",
        "}\n",
        "\n",
@@ -118,6 +118,10 @@
        "    padding: 5px;\n",
        "    border: 1px solid hsla(120, 60%, 70%, 0.5);\n",
        "    border-left: 2px solid black;\n",
+       "}\n",
+       "\n",
+       ".template_block:hover {\n",
+       "    border-color: black;\n",
        "}\n",
        "\n",
        ".template_block pre {\n",
@@ -131,6 +135,7 @@
        "\n",
        "</style>\n",
        "\n",
+       "<div class='jp-tpl-structure'>\n",
        "<h3>Main page</h3>\n",
        "<div class=\"template_block\">header</div>\n",
        "\n",
@@ -222,6 +227,7 @@
        "        <div class=\"template_block\">bibliography</div>\n",
        "    </div>\n",
        "</div>\n",
+       "</div>\n",
        "\n"
       ],
       "text/plain": [
@@ -253,31 +259,41 @@
    "source": [
     "## Templates that use cell metadata\n",
     "\n",
-    "The notebook file format supports attaching arbitrary JSON metadata to each cell.  Here, as an exercise, you will use the metadata to tag cells.\n",
+    "The notebook file format supports attaching arbitrary JSON metadata to each cell. \n",
+    "Here, as an exercise, you will use the metadata to tag cells.\n",
     "\n",
-    "First you need to choose another notebook you want to convert to html, and tag some of the cells with metadata.  You can refer to the file `soln/celldiff.js` as an example or follow the Javascript tutorial to figure out how do change cell metadata.  Assuming you have a notebook with some of the cells tagged as `'Easy'`, `'Medium'`, `'Hard'`, or `<None>`, the notebook can be converted specially using a custom template.  Design your template in the cells provided below.\n",
+    "First you need to choose another notebook you want to convert to html, and tag some of the cells with metadata. \n",
+    "You can refer to the file `soln/celldiff.js` as an example or follow the Javascript tutorial to figure out how\n",
+    "do change cell metadata.  Assuming you have a notebook with some of the cells tagged as `'Easy'`, `'Medium'`,\n",
+    "`'Hard'`, or `<None>`, the notebook can be converted specially using a custom template.\n",
+    "Design your template in the cells provided below.\n",
     "\n",
-    "Hint: if your tags are located at `cell.metadata.example.difficulty`, the following Python code would get the value of the tag: `cell['metadata'].get('example', {}).get('difficulty', '')`\n",
+    "Hint: if your tags are located at `cell.metadata.example.difficulty`, the following Python code would get\n",
+    "the value of the tag: \n",
     "\n",
-    "The following **unorganized** lines of code may be a helpful starting point:"
+    "```python\n",
+    "cell['metadata'].get('example', {}).get('difficulty', '')\n",
+    "```\n",
+    "\n",
+    "The following lines of code may be a helpful starting point:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "%%writefile mytemplate.tpl\n",
     "\n",
-    "{% extends 'html_full.tpl'%}\n",
+    "{% extends 'full.tpl'%}\n",
     "{% block any_cell %}\n",
-    "{{ super() }}\n",
-    "<div style=\"background-color:red\">\n",
-    "<div style='background-color:orange'>\n",
-    "{% endblock any_cell %}\n"
+    "    <div style=\"border:thin solid red\">\n",
+    "        {{ super() }}\n",
+    "    </div>\n",
+    "{% endblock any_cell %}"
    ]
   },
   {
