Add textcomp to latex template for textquotesingle (single tick)

--- a/nbconvert/tests/files/notebook2.ipynb
+++ b/nbconvert/tests/files/notebook2.ipynb
@@ -1585,6 +1585,13 @@
    "source": [
     "This string contains a ~~strikethrough~~, struckthrough. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This string contains a `'` single tick inside backticks, leading to a ``\\textquotesingle`` in latex."
+   ]
   }
  ],
  "metadata": {
