--- a/docs/source/nbconvert_library.ipynb
+++ b/docs/source/nbconvert_library.ipynb
@@ -518,20 +518,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/benjaminrk/conda/lib/python3.5/site-packages/ipykernel/__main__.py:9: DeprecationWarning: metadata {'config': True} was set from the constructor.  Metadata should be set using the .tag() method, e.g., Int().tag(key1='value1', key2='value2')\n",
-      "/Users/benjaminrk/conda/lib/python3.5/site-packages/ipykernel/__main__.py:10: DeprecationWarning: metadata {'config': True} was set from the constructor.  Metadata should be set using the .tag() method, e.g., Int().tag(key1='value1', key2='value2')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from traitlets import Integer\n",
     "from nbconvert.preprocessors import Preprocessor\n",
@@ -541,8 +532,10 @@
     "    \n",
     "    # I could also read the cells from nb.metadata.pelican if someone wrote a JS extension,\n",
     "    # but for now I'll stay with configurable value. \n",
-    "    start = Integer(0, config=True, help=\"first cell of notebook to be converted\")\n",
-    "    end   = Integer(-1, config=True, help=\"last cell of notebook to be converted\")\n",
+    "    start = Integer(0,  help=\"first cell of notebook to be converted\")\n",
+    "    end   = Integer(-1, help=\"last cell of notebook to be converted\")\n",
+    "    start.tag(config='True')\n",
+    "    end.tag(config='True')\n",
     "    \n",
     "    def preprocess(self, nb, resources):\n",
     "        self.log.info(\"I'll keep only cells from %d to %d\", self.start, self.end)\n",
@@ -693,9 +686,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
