make it have the correct bad metadata

--- a/nbconvert/exporters/tests/files/ScriptExporterTest.ipynb
+++ b/nbconvert/exporters/tests/files/ScriptExporterTest.ipynb
@@ -54,7 +54,8 @@
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
+   "nbconvert_exporter": "this_doesnt_exist",
+   "nbconvert_exporter_package": "do_you_see_me",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
   }
