--- a/nbconvert/exporters/tests/files/notebook2.ipynb
+++ b/nbconvert/exporters/tests/files/notebook2.ipynb
@@ -163,6 +163,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "This cell is just markdown for testing whether an ASCIIDoc quirk is caught.\n",
+    "\n",
+    "one *test* two *tests*. three *tests*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
