Update template structure with new HTML block
Added a block around the HTML template's version of the cell output
prompt.

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -280,12 +280,18 @@
        "    <div class=\"big_vertical_ellipsis\">&#8942;</div>\n",
        "</div>\n",
        "\n",
-       "<h3>Extra HTML blocks (full.tpl)</h3>\n",
-       "<div class=\"template_block\">header\n",
-       "    <pre>&lt;head&gt;</pre>\n",
-       "    <div class=\"template_block\">html_head</div>\n",
-       "    <pre>&lt;/head&gt;</pre>\n",
-       "</div>\n",
+       "<h3>Extra HTML blocks</h3>\n",
+       "    <h4><pre>basic.tpl</pre></h4>\n",
+       "        <div class=\"template_block\">output\n",
+       "            <div class=\"template_block\">output_area_prompt</div>\n",
+       "            <div class=\"template_block\"><pre>{&#37; super &#37;}</pre></div>\n",
+       "        </div>\n",
+       "    <h4><pre>full.tpl</pre></h4>\n",
+       "        <div class=\"template_block\">header\n",
+       "            <pre>&lt;head&gt;</pre>\n",
+       "            <div class=\"template_block\">html_head</div>\n",
+       "            <pre>&lt;/head&gt;</pre>\n",
+       "        </div>\n",
        "\n",
        "<h3>Extra Latex blocks</h3>\n",
        "<div class=\"template_block\">header\n",
