Show less implementation detail in template docs

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -284,7 +284,7 @@
        "    <h4><pre>basic.tpl</pre></h4>\n",
        "        <div class=\"template_block\">output\n",
        "            <div class=\"template_block\">output_area_prompt</div>\n",
-       "            <div class=\"template_block\"><pre>{&#37; super &#37;}</pre></div>\n",
+       "            <div class=\"template_block\">output (as above)</div>\n",
        "        </div>\n",
        "    <h4><pre>full.tpl</pre></h4>\n",
        "        <div class=\"template_block\">header\n",
