get mathjax from cdnjs
cdn.mathjax.org is shutting down

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -12207,7 +12207,7 @@
        "\n",
        "<!-- Loading mathjax macro -->\n",
        "<!-- Load mathjax -->\n",
-       "    <script src=\"https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML\"></script>\n",
+       "    <script src=\"https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML\"></script>\n",
        "    <!-- MathJax configuration -->\n",
        "    <script type=\"text/x-mathjax-config\">\n",
        "    MathJax.Hub.Config({\n",
@@ -24493,7 +24493,7 @@
     "\n",
     "<!-- Loading mathjax macro -->\n",
     "<!-- Load mathjax -->\n",
-    "    <script src=\"https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML\"></script>\n",
+    "    <script src=\"https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML\"></script>\n",
     "    <!-- MathJax configuration -->\n",
     "    <script type=\"text/x-mathjax-config\">\n",
     "    MathJax.Hub.Config({\n",
