Upgrade mathjax to version 2.7.1

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,17 +54,18 @@
       "\n",
       "# In[1]:\n",
       "\n",
+      "\n",
       "print(\"This is a code cell that produces some output\")\n",
       "\n",
       "\n",
       "# ### Inline figures\n",
       "\n",
-      "# In[2]:\n",
+      "# In[1]:\n",
       "\n",
-      "get_ipython().magic('matplotlib inline')\n",
       "\n",
       "import matplotlib.pyplot as plt\n",
       "import numpy as np\n",
+      "plt.ion()\n",
       "\n",
       "x = np.linspace(0, 2 * np.pi, 100)\n",
       "y = np.sin(x)\n",
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,15 +102,16 @@
       "\n",
       "# In[1]:\n",
       "\n",
+      "\n",
       "print(\"This is a code cell that produces some output\")\n",
       "\n",
       "\n",
-      "# In[2]:\n",
+      "# In[1]:\n",
       "\n",
-      "get_ipython().magic('matplotlib inline')\n",
       "\n",
       "import matplotlib.pyplot as plt\n",
       "import numpy as np\n",
+      "plt.ion()\n",
       "\n",
       "x = np.linspace(0, 2 * np.pi, 100)\n",
       "y = np.sin(x)\n",
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,12 +189,11 @@
       "print(\"This is a code cell that produces some output\")\n",
       "\n",
       "\n",
-      "# [2]:\n",
-      "\n",
-      "get_ipython().magic('matplotlib inline')\n",
+      "# [1]:\n",
       "\n",
       "import matplotlib.pyplot as plt\n",
       "import numpy as np\n",
+      "plt.ion()\n",
       "\n",
       "x = np.linspace(0, 2 * np.pi, 100)\n",
       "y = np.sin(x)\n",
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -408,14 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing mytemplate.tpl\n"
+      "Overwriting mytemplate.tpl\n"
      ]
     }
    ],
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -12184,9 +12185,7 @@
        "div#notebook {\n",
        "  overflow: visible;\n",
        "  border-top: none;\n",
-       "}\n",
-       "\n",
-       "@media print {\n",
+       "}@media print {\n",
        "  div.cell {\n",
        "    display: block;\n",
        "    page-break-inside: avoid;\n",
@@ -12207,7 +12206,7 @@
        "\n",
        "<!-- Loading mathjax macro -->\n",
        "<!-- Load mathjax -->\n",
-       "    <script src=\"https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML\"></script>\n",
+       "    <script src=\"https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML\"></script>\n",
        "    <!-- MathJax configuration -->\n",
        "    <script type=\"text/x-mathjax-config\">\n",
        "    MathJax.Hub.Config({\n",
@@ -12232,10 +12231,8 @@
        "    <div class=\"container\" id=\"notebook-container\">\n",
        "\n",
        "\n",
-       "    <div style=\"border:thin solid red\">\n",
-       "        \n",
-       "<div class=\"cell border-box-sizing text_cell rendered\">\n",
-       "<div class=\"prompt input_prompt\">\n",
+       "    \n",
+       "<div class=\"cell border-box-sizing text_cell rendered\"><div class=\"prompt input_prompt\">\n",
        "</div>\n",
        "<div class=\"inner_cell\">\n",
        "<div class=\"text_cell_render border-box-sizing rendered_html\">\n",
@@ -12243,13 +12240,11 @@
        "</div>\n",
        "</div>\n",
        "</div>\n",
-       "    </div>\n",
        "\n",
        "\n",
        "\n",
        "    \n",
-       "<div class=\"cell border-box-sizing text_cell rendered\">\n",
-       "<div class=\"prompt input_prompt\">\n",
+       "<div class=\"cell border-box-sizing text_cell rendered\"><div class=\"prompt input_prompt\">\n",
        "</div>\n",
        "<div class=\"inner_cell\">\n",
        "<div class=\"text_cell_render border-box-sizing rendered_html\">\n",
@@ -12261,9 +12256,9 @@
        "\n",
        "\n",
        "\n",
-       "    \n",
-       "<div class=\"cell border-box-sizing text_cell rendered\">\n",
-       "<div class=\"prompt input_prompt\">\n",
+       "    <div style=\"border:thin solid orange\">\n",
+       "        \n",
+       "<div class=\"cell border-box-sizing text_cell rendered\"><div class=\"prompt input_prompt\">\n",
        "</div>\n",
        "<div class=\"inner_cell\">\n",
        "<div class=\"text_cell_render border-box-sizing rendered_html\">\n",
@@ -12274,13 +12269,12 @@
        "</div>\n",
        "</div>\n",
        "</div>\n",
+       "    </div>\n",
        "\n",
        "\n",
        "\n",
-       "    <div style=\"border:thin solid green\">\n",
-       "        \n",
-       "<div class=\"cell border-box-sizing text_cell rendered\">\n",
-       "<div class=\"prompt input_prompt\">\n",
+       "    \n",
+       "<div class=\"cell border-box-sizing text_cell rendered\"><div class=\"prompt input_prompt\">\n",
        "</div>\n",
        "<div class=\"inner_cell\">\n",
        "<div class=\"text_cell_render border-box-sizing rendered_html\">\n",
@@ -12288,11 +12282,11 @@
        "</div>\n",
        "</div>\n",
        "</div>\n",
-       "    </div>\n",
        "\n",
        "\n",
        "\n",
-       "    \n",
+       "    <div style=\"border:thin solid green\">\n",
+       "        \n",
        "<div class=\"cell border-box-sizing code_cell rendered\">\n",
        "<div class=\"input\">\n",
        "<div class=\"prompt input_prompt\">In&nbsp;[1]:</div>\n",
@@ -12324,12 +12318,12 @@
        "</div>\n",
        "\n",
        "</div>\n",
+       "    </div>\n",
        "\n",
        "\n",
        "\n",
        "    \n",
-       "<div class=\"cell border-box-sizing text_cell rendered\">\n",
-       "<div class=\"prompt input_prompt\">\n",
+       "<div class=\"cell border-box-sizing text_cell rendered\"><div class=\"prompt input_prompt\">\n",
        "</div>\n",
        "<div class=\"inner_cell\">\n",
        "<div class=\"text_cell_render border-box-sizing rendered_html\">\n",
@@ -12340,7 +12334,7 @@
        "\n",
        "\n",
        "\n",
-       "    <div style=\"border:thin solid orange\">\n",
+       "    <div style=\"border:thin solid red\">\n",
        "        \n",
        "<div class=\"cell border-box-sizing code_cell rendered\">\n",
        "<div class=\"input\">\n",
@@ -12612,23 +12606,6 @@
        "\n",
        "</div>\n",
        "    </div>\n",
-       "\n",
-       "\n",
-       "\n",
-       "    \n",
-       "<div class=\"cell border-box-sizing code_cell rendered\">\n",
-       "<div class=\"input\">\n",
-       "<div class=\"prompt input_prompt\">In&nbsp;[&nbsp;]:</div>\n",
-       "<div class=\"inner_cell\">\n",
-       "    <div class=\"input_area\">\n",
-       "<div class=\" highlight hl-ipython3\"><pre><span></span> \n",
-       "</pre></div>\n",
-       "\n",
-       "</div>\n",
-       "</div>\n",
-       "</div>\n",
-       "\n",
-       "</div>\n",
        "\n",
        "\n",
        "    </div>\n",
@@ -24929,7 +24906,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -24945,7 +24921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
