fix for an issue with empty math block

--- a/nbconvert/exporters/tests/files/notebook2.ipynb
+++ b/nbconvert/exporters/tests/files/notebook2.ipynb
@@ -172,6 +172,13 @@
     "\n",
     "one *test* two *tests*. three *tests*"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure markdown parser doesn't crash with empty Latex formulas blocks\n$$$$\n$$"
+   ]
   }
  ],
  "metadata": {
