was using a dev version of ipywidgets

--- a/nbconvert/preprocessors/tests/files/widget-hello-world.ipynb
+++ b/nbconvert/preprocessors/tests/files/widget-hello-world.ipynb
@@ -8,12 +8,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b7682af077b481bac11bcbe5e23da86",
+       "model_id": "1e3465e5050d486aa7fd4d8de9b78ae9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Label(value='Hello World', context_menu=None)"
+       "Label(value='Hello World')"
       ]
      },
      "metadata": {},
@@ -33,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5070d678e14c4a608c622beac723691c",
+       "model_id": "d0f552c064be4b89b196baca1960a43d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -73,6 +73,31 @@
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
+     "11098546fcf14a4d94f5ddd297b3c1be": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.4.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "1e3465e5050d486aa7fd4d8de9b78ae9": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.4.0",
+      "model_name": "LabelModel",
+      "state": {
+       "context_menu": null,
+       "layout": "IPY_MODEL_2604883b6ad54ad9bf6dafa5f0b1ee06",
+       "style": "IPY_MODEL_11098546fcf14a4d94f5ddd297b3c1be",
+       "value": "Hello World"
+      }
+     },
+     "2604883b6ad54ad9bf6dafa5f0b1ee06": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.1.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
      "26db725aa0f943179e908dae2db91dcd": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "1.4.0",
@@ -171,6 +196,12 @@
       "model_name": "LayoutModel",
       "state": {}
      },
+     "a6b9eb6dfcd748b3b3cf5e1360e8ac71": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.1.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
      "a74b72c024714b1eac261ac3a4e71dc5": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.1.0",
@@ -182,6 +213,24 @@
       "model_module_version": "1.1.0",
       "model_name": "LayoutModel",
       "state": {}
+     },
+     "d0f552c064be4b89b196baca1960a43d": {
+      "buffers": [
+       {
+        "data": "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8z/C/HgAGgwJ/lK3Q6wAAAABJRU5ErkJggg==",
+        "encoding": "base64",
+        "path": [
+         "value"
+        ]
+       }
+      ],
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.4.0",
+      "model_name": "ImageModel",
+      "state": {
+       "context_menu": null,
+       "layout": "IPY_MODEL_a6b9eb6dfcd748b3b3cf5e1360e8ac71"
+      }
      },
      "db63c06429bc45e2bc4c1f0b1a791622": {
       "model_module": "@jupyter-widgets/base",
